@@ -1,51 +1,30 @@
 # See LICENSE for licensing details.
 
-OCB = ocamlbuild -classic-display
-
-.PHONY: all
+.PHONY: all all-release
 all:
-	$(OCB) -no-links src/abella.native
-	if file _build/src/abella.native | grep Windows >/dev/null 2>&1 ; then \
-	  cp _build/src/abella.native abella.exe ; \
-	else \
-	  cp -a _build/src/abella.native abella ; \
-	fi
+	dune build
 
-.PHONY: all-windows
-all-windows:
-	OCAMLFIND_TOOLCHAIN=windows $(MAKE) all
+all-release:
+	dune build --release
 
 AIN := abella.install
 
 .PHONY: $(AIN)
 $(AIN):
-	echo 'bin: ["_build/src/abella.native" {"abella"}]' > $(AIN)
+	echo 'bin: ["_build/default/src/abella.exe" {"abella"}]' > $(AIN)
 	echo 'share: [' >> $(AIN)
 	for f in emacs/* `find examples -type f | grep -E '(sig|mod|thm)$$'` ; do \
 	    echo '"'$$f'"' '{"'$$f'"}' >> $(AIN) ; \
 	done
 	echo ']' >> $(AIN)
 
+
 .PHONY: clean
 clean:
-	$(OCB) -clean
-	$(RM) src/version.ml
-	$(RM) abella abella.exe
+	dune clean
+	$(RM) abella abella.exe abella.install
 
-.PHONY: byte
-byte:
-	$(OCB) src/abella.byte
-
-.PHONY: gitclean
-gitclean:
-	git clean -xfd -e examples
-
-.PHONY: top
-top: all
-	$(OCB) src/abella.cma
-	ocaml
-
-.PHONY: test
-test: all
-	$(OCB) -no-links test/test.native
-	_build/test/test.native
+# .PHONY: test
+# test: all
+# 	$(OCB) -no-links test/test.native
+# 	_build/test/test.native
