@@ -1,0 +1,20 @@
+(lang dune 2.7)
+
+(name abella)
+
+(version v2.0.6-16-g94975b4-dirty)
+
+(license GPL-3.0-or-later)
+
+(authors
+  "Andrew Gacek"
+  "Kaustuv Chaudhuri"
+  "Yuting Wang")
+
+(maintainers
+  "Kaustuv Chaudhuri <kaustuv.chaudhuri@inria.fr>")
+
+(source
+  (github abella-prover/abella))
+
+(homepage "https://abella-prover.org")
