@@ -1,2 +1,0 @@
-<*.ml*> or <*.cm*> or <*.native> or <*.byte> : use_unix
-<ext>: include
