@@ -1,6 +1,13 @@
 Changes in 2.0.8-dev from 2.0.7
 -------------------------------
 
+Possibly breaking changes
+
+* Abella now uses Dune instead of ocamlbuild.
+
+
+Bugfixes
+
 
 Changes in 2.0.7
 ------------------
